--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,7 +8,7 @@
 <channel>
 	<title>
 	Comments for Miracom	</title>
-	<atom:link href="https://home.miracomcomputer.com/comments/feed/" rel="self" type="application/rss+xml" />
+	<atom:link href="comments/feed/" rel="self" type="application/rss+xml" />
 	<link>https://home.miracomcomputer.com/</link>
 	<description></description>
 	<lastBuildDate>Wed, 26 Mar 2025 21:20:15 +0000</lastBuildDate>
