--- a/privacy-policy/feed/index.html
+++ b/privacy-policy/feed/index.html
@@ -8,7 +8,7 @@
 <channel>
 	<title>
 	Comments on: Privacy Policy	</title>
-	<atom:link href="https://home.miracomcomputer.com/privacy-policy/feed/" rel="self" type="application/rss+xml" />
+	<atom:link href="privacy-policy/feed/" rel="self" type="application/rss+xml" />
 	<link>https://home.miracomcomputer.com/privacy-policy/</link>
 	<description></description>
 	<lastBuildDate>Sun, 19 Jun 2022 18:19:35 +0000</lastBuildDate>
